syntax = "proto3";

package calculator;

// Set package name
option java_package = "com.proto.testy";
// Generate multiple java class files
option java_multiple_files = true;

// Message
message SumRequest {
    int32 first_number = 1;
    int32 second_nmumber = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message SubRequest {
    int32 first_number = 1;
    int32 second_nmumber = 2;
}

message SubResponse {
    int32 sub_result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message findMaxRequest {
    int32 number = 1;
}

message findMaxResponse {
    int32 max = 1;
}

// service
service CalculatorService {
    // Unary
    rpc Sum (SumRequest) returns (SumResponse) {
    };
    rpc Sub (SubRequest) returns (SubResponse) {
    };

    // Stream Server
    // Algo will Send the prime num as soon as it finds.. So, No comprise in speed
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {
    };

    // Compute Avg
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse) {
    };

    rpc findMax (stream findMaxRequest) returns (stream findMaxResponse) {

    };
}